--- a/A/Altice/Altice_May2020/ads/OPT_AO_64_2yr/300x600/300x600_bk.html
+++ b/A/Altice/Altice_May2020/ads/OPT_AO_64_2yr/300x600/300x600_bk.html
@@ -26,7 +26,7 @@
         width: 300px;
         height: 600px;
         font-family: Arial,Helvetica,sans-serif;
-        color: #000;
+        color: #fff;
       }
       .frame {
         position: absolute;
@@ -64,72 +64,38 @@
       .verticalBar {
         position: absolute;
         top:0px;
-        width: 7px;
-        height: 58px;
+        width: 10px;
+        height: 56px;
         background-color: #fff;
         transform-origin: top center;
       }
-      .coloredText {
-        background: linear-gradient(to right, #24d9c3, #0084d6);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-      }
-      .bulletedText {
-        position: relative;
-        padding-left: 24px;
-        font-size: 26px;
-        line-height: 1.05;
-        margin-bottom: 6px;
-      }
-      .bulletedText::before {
-        content: '+';
-        position: absolute;
-        top: -2px;
-        left: 0px;
-        font-size: 26px;
-        color: #0084d6;
-      }
-      #cta::before, #introCta::before {
-        content: ' ';
-        position: absolute;
-        top: 2px;
-        left: 2px;
-        width: inherit;
-        height: inherit;
-        border-radius: 15px;
-        box-sizing: content-box;
-        background: #f5f4f7;
-      }
-      #cta:hover {
-        opacity: 0.7 !important;
-      }
-      #introCta:hover {
-        opacity: 0.7 !important;
-      }
+      #cta { background-color: !{ctaBtn}; }
+      #cta:hover { background-color: !{ctaBtnHover}; }
+      #introCta { background: !{ctaBtn}; }
+      #introCta:hover { background-color: !{ctaBtnHover}; }
     </style>
   <!-- Start of overrode asset attributes values -->
 <script type="text/javascript">
 amo.registerClick("clickUrl","https://www.altice.com");
-amo.registerAttribute("frameVideo1", "TEXT", "AlticeIntroVideo_May2020.mp4");
-amo.registerAttribute("ctaText","TEXT","Shop now");
-amo.registerAttribute("frameImage2","IMAGE","300x600_OPT_SPRING_ACQ_AO_Amz_64Yr2_Img_Frame02.png");
+amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altice/2020-02/300x600_intro_animation.mp4");
+amo.registerAttribute("ctaText","TEXT","Learn more");
+amo.registerAttribute("frameImage2","IMAGE","300x600_OPT_AO_FEB_Amz_64Yr2_Img_Frame02.png");
 amo.registerAttribute("frameImage3","IMAGE","1x1.png");
-amo.registerAttribute("frameImage4","IMAGE","300x600_OPT_SPRING_ACQ_AO_Amz_64Yr2_Img_Frame04.png");
-amo.registerAttribute("frameImage5","IMAGE","300x600_OPT_SPRING_ACQ_AO_Amz_64Yr2_Img_Frame05.png");
-amo.registerAttribute("frameText1","TEXT","Stay<br>connected<br>on your<br>work day");
-amo.registerAttribute("frameText12","TEXT","and<br>school<br>day");
-amo.registerAttribute("frameText21", "TEXT", "<div style='top: 115px;left: 33px;font-size: 28px;line-height:1.1;color: #fff;'>Internet & TV</div>");
-amo.registerAttribute("frameText22", "TEXT", "<div style='top: 142px;left: 24px;width: 260px;color: #fff;line-height: 1;'><font style='font-size: 116px;letter-spacing: -1.5px;'>$64</font><font style='margin-left: 9px;font-size: 19px;display: inline-block;vertical-align: 48px;'>99/<br>mo.</font><div style='display:inline-block;font-size: 15.5px;padding: 5px 11px 7px 10px;margin: 5px 0px 0px 11px;border-top-right-radius: 15px;border-bottom-right-radius: 15px;color: #0084d6;background: #fff;'>Guaranteed for 2 yrs.</div><div class='AlticeRegular' style='margin: 10px 0 0 10px;font-size: 14px;'>Plus taxes, fees<br>& charges</div></div>");
-amo.registerAttribute("frameText23", "TEXT", "&nbsp;");
-amo.registerAttribute("frameText31","TEXT","<div style='top:88px;left:18px;'><div class='bulletedText'>Up to 200 Mbps<br>Internet</div></div>");
-amo.registerAttribute("frameText32","TEXT","<div style='top:148px;left:18px;'><div class='bulletedText'>Altice One with<br>220+ channels</div></div>");
-amo.registerAttribute("frameText33","TEXT","<div style='top:208px;left:18px;'><div class='bulletedText'>Contract buyout<br>up to $500</div></div><div class='AlticeRegular' style='top: 477px;left: 18px;font-size: 14px;line-height: 1.1;'>Wired connection.<br>WiFi speeds may vary.</div>");
-amo.registerAttribute("frameText41","TEXT","<div style='top: 83px;left: 16px;font-size: 80px;line-height: 1;' class='coloredText'>$100</div>");
-amo.registerAttribute("frameText42","TEXT","<div style='top: 160px;left: 21px;font-size: 27.8px;line-height: 1;'>Amazon.com<br>Gift Card</div>");
-amo.registerAttribute("frameText43","TEXT","<div class='AlticeRegular' style='position: absolute;top: 477px;left: 21px;font-size: 14px;line-height: 1.1;'>Restrictions apply,<br>see amazon.com/gc-legal</div>");
-amo.registerAttribute("frameText51", "TEXT", "<div style='top: 86px;left: 24px;font-size: 28px;line-height:1.1;'>Internet & TV</div>");
-amo.registerAttribute("frameText52", "TEXT", "<div style='top: 112px;left: 17px;width: 260px;line-height: 1;'><font style='font-size: 116px;letter-spacing: -1.5px;' class='coloredText'>$64</font><font style='margin-left: 7px;font-size: 19px;display: inline-block;vertical-align: 48px;'>99/<br>mo.</font><div style='display:inline-block;font-size: 16px;padding: 6px 18px 5px 12px;margin: 3px 0px 0px 10px;border-top-right-radius: 13px;border-bottom-right-radius: 13px;color: #fff;background: #0084d6;'>Guaranteed for 2 yrs.</div><div class='AlticeRegular' style='margin: 10px 0 0 8px;font-size: 14px;'>Plus taxes, fees & charges</div></div>");
-amo.registerAttribute("frameText53", "TEXT", "<div style='top: 305px;left: 26px;transform: scale(0.655);transform-origin: top left;'><div class='bulletedText'>No annual contract</div><div class='bulletedText' style='margin-top: -3px;'>$100 gift card</div></div>");
+amo.registerAttribute("frameImage4","IMAGE","300x600_OPT_AO_FEB_Amz_64Yr2_AmzCard100_Img_Frame04.png");
+amo.registerAttribute("frameImage5","IMAGE","300x600_OPT_AO_FEB_Amz_64Yr2_Img_Frame05.png");
+amo.registerAttribute("frameText1","TEXT","&nbsp;");
+amo.registerAttribute("frameText21", "TEXT", "&nbsp;");
+amo.registerAttribute("frameText22", "TEXT", "<div style='top:70px;left:21px;line-height:1.2;'><div style='font-size:24px;'>Fiber Internet + TV</div><div style='color: #0084d6;font-size:80px;margin-top:-12px;margin-left:-4px;letter-spacing:-4.5px;'><sup style='font-size:60%;vertical-align:43%;line-height:1.1;'>$</sup>64<sup style='font-size:60%;vertical-align:43%;letter-spacing:-1px;line-height:1.1;'>99</sup></div></div>");
+amo.registerAttribute("frameText23", "TEXT", "<div style='top:166px;left:20px;font-size:18px;'>mo./2 yrs. guaranteed<div class='AlticeRegular' style='font-size:12px;'>plus taxes, fees &amp; charges</div></div>");
+amo.registerAttribute("frameText31","TEXT","<div style='top:55px;left:20px;line-height:1.3;font-size:20px;padding-left:16px;text-indent:-16px;'><span style='color:#0084d6;padding-right:5px;'>+</span>Up to 200 Mbps Speed<br>Upload and Download</div>");
+amo.registerAttribute("frameText32","TEXT","<div style='top:115px;left:20px;line-height:1.3;font-size:20px;padding-left:16px;text-indent:-16px;'><span style='color:#0084d6;padding-right:5px;'>+</span>Altice One with 220+<br>Channels</div>");
+amo.registerAttribute("frameText33","TEXT","<div style='top:175px;left:20px;line-height:1.3;font-size:20px;padding-left:16px;text-indent:-16px;'><span style='color:#0084d6;padding-right:5px;'>+</span>Contract Buyout<br>up to $500!</div><div class='AlticeRegular' style='top:500px;left:20px;font-size:9.5px;'>Wired connection.<br>WiFi speeds may vary.</div>");
+amo.registerAttribute("frameText41","TEXT","<div style='top: 27px;left: 17px;line-height: 1.6;font-size: 16px;letter-spacing: -2px;'><div style='color: #0084d6;font-size: 84px;'><sup style='font-size:60%;vertical-align: 31%;'>$</sup>100</div></div>");
+amo.registerAttribute("frameText42","TEXT","<div style='top: 135px;left: 20px;line-height: 1.1;font-size: 32px;'>Amazon.com<br>Gift Card</div>");
+amo.registerAttribute("frameText43","TEXT","<div class='AlticeRegular' style='top: 500px;left: 20px;font-size: 9.5px;'>Restrictions apply, see<br>amazon.com/gc-legal</div>");
+amo.registerAttribute("frameText51", "TEXT", "<div style='top:70px;left:21px;line-height:1.2;font-size:24px;'>Fiber Internet + TV</div>");
+amo.registerAttribute("frameText52", "TEXT", "<div style='top:90px;left:17px;line-height:1.1;'><div style='color: #0084d6;font-size:80px;letter-spacing:-4.5px;'><sup style='font-size:60%;vertical-align:43%;'>$</sup>64<sup style='font-size:60%;vertical-align:43%;letter-spacing:-1px;'>99</sup></div><div style='font-size:18px;margin-top: -9px;margin-left:3px;'>mo./2 yrs. guaranteed<div class='AlticeRegular' style='font-size:12px;margin-top:4px;'>plus taxes, fees &amp; charges</div></div></div>");
+amo.registerAttribute("frameText53", "TEXT", "<div style='top:246px;left:21px;line-height:1.6;font-size:16px;'><div><span style='color:#0084d6;padding-right:5px;'>+</span>$100 Amazon.com Gift Card</div><div><span style='color:#0084d6;padding-right:5px;'>+</span>No Annual Contract</div></div>");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -142,7 +108,7 @@ amo.registerAttribute("frameText53", "TEXT", "<div style='top: 305px;left: 26px;
         left:0px;
         width:inherit;
         height:inherit;
-        background-color:#f5f4f7;">
+        background-color:#000;">
     </div>
     <!-- <div id="ref" class="asset adSizeContainer" data-image="ref"></div> -->
     <div id="logoImage" class="asset adSizeContainer" data-image="logoImage"></div>
@@ -166,59 +132,35 @@ amo.registerAttribute("frameText53", "TEXT", "<div style='top: 305px;left: 26px;
     <!-- <div id="priceLabel" class="asset adSizeContainer" data-image="priceLabel"></div> -->
     <div id="cta" class="text AlticeBold"
       data-text="ctaText"
-      style="top: 540px;
-        left: 16px;
-        width: 99px;
-        height: 22px;
-        font-size: 15px;
-        overflow: hidden;
-        border-radius: 15px;
-        padding: 2px;
-        background-image: linear-gradient(to right, #24d9c3, #0084d6);">
+      style="top: 550px;
+        left: 20px;
+        width: 96px;
+        height: 20px;
+        font-size: 12px;
+        border-radius: 10px;
+        color:#fff;">
     </div>
     <div id="frame1" class="frame"
       style="transform-origin:bottom center;
       -webkit-transition:opacity ease-out 0.3s, transform ease-out 0.3s;
       transition:opacity ease-out 0.3s, transform ease-out 0.3s;
-      background-color:#f5f4f7;
+      background-color:#000;
       opacity:1;">
       <!-- <div id="ref" class="asset adSizeContainer"data-image="ref"></div> -->
-      <div id="frameVideo1" style="top: 43px;left: 38px;width: 220px;height: 220px;"><video muted playsinline autoplay style="width:100%;"></video></div>
-      <div id="frameText1" class="text AlticeBold"
-        data-text="frameText1"
-        data-style="text-align:center;"
-        style="top: 237px;
-          left: 15px;
-          width: 260px;
-          height: 180px;
-          font-size: 36px;
-          line-height: 1;">
-      </div>
-      <div id="frameText12" class="text AlticeBold"
-        data-text="frameText12"
-        data-style="text-align:center;"
-        style="top: 244px;
-          left: 15px;
-          width: 260px;
-          height: 130px;
-          font-size: 36px;
-          line-height: 1;">
-      </div>
+      <div id="frameVideo1" style="top: 136px;left: 37px;width: 227px;height: 230px;"><video muted playsinline autoplay style="width:100%;"></video></div>
+      <div id="frameText1" class="frameText">!{frameText1}</div>
       <div id="introLogoImage" class="asset adSizeContainer" data-image="introLogoImage"></div>
       <div id="introCta" class="text AlticeBold"
         data-text="ctaText"
-        style="top: 540px;
-          left: 16px;
-          width: 99px;
-          height: 22px;
-          font-size: 15px;
-          overflow: hidden;
-          border-radius: 15px;
-          padding: 2px;
-          background-image: linear-gradient(to right, #24d9c3, #0084d6);">
+        style="top: 550px;
+          left: 20px;
+          width: 96px;
+          height: 20px;
+          font-size: 12px;
+          border-radius: 10px;
+          color:#fff;">
       </div>
     </div>
-
     <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all 0.5s ease 1s;transition:all 0.5s ease 1s;"></div>
   </div>
   <div id="loadFont" style="width:0;height:0;overflow:hidden;">
@@ -226,6 +168,7 @@ amo.registerAttribute("frameText53", "TEXT", "<div style='top: 305px;left: 26px;
     <div class="AlticeBold" style="color:transparent;">AlticeBold</div>
   </div>
   <script type="text/javascript">
+
     var ad = new Ad({
       root: document.querySelector('#ad'),
       width: 300,
@@ -238,9 +181,13 @@ amo.registerAttribute("frameText53", "TEXT", "<div style='top: 305px;left: 26px;
         cam: {},
         feed: [],
         staticData: {
-          logoImage: 'images/300x600_Logo_Optimum_Black.png',
-          introLogoImage: 'images/300x600_Logo_Optimum_Black.png',
+          logoImage: 'images/300x600_Logo_Optimum_White.png',
+          introLogoImage: 'images/300x600_Logo_Optimum_White.png',
+          // priceLabel: '300x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
           frameBackground: '1x1.png',
+          // starImage: 'images/star.svg',
+          ctaBtn: '#0084d6',
+          ctaBtnHover: '#005990',
           // ref: 'ref.png',
         },
         beforeLoad: function(data){
@@ -279,19 +226,11 @@ amo.registerAttribute("frameText53", "TEXT", "<div style='top: 305px;left: 26px;
           .to('#frameText'+frame+'2', {delay:-0.2, x:0,y:0})
           .to('#frameText'+frame+'3', {delay:-0.2, x:0,y:0});
         }
-        var generalLeftFrameAnimation = function(frame){
-          gsap.set('#frameImage'+frame, {x:'0'});
-          gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .from('#frameImage'+frame, {autoAlpha:0,delay:0.2})
-          .to('#frameText'+frame+'1', {x:0,y:0})
-          .to('#frameText'+frame+'2', {delay:-0.2, x:0,y:0})
-          .to('#frameText'+frame+'3', {delay:-0.2, x:0,y:0});
-        }
         var animateFrame5 = function(flag){
           var frameId = 5;
           gsap.set('#frameBackground', {display: 'none'});
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameImage'+frameId, {duration:0, onComplete: generalFrameAnimation, onCompleteParams:[5]})
+          .to('#frameImage'+frameId, {duration:0, onComplete: priceFrameAnimation, onCompleteParams:[5]})
           // .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', {delay: 2.2, opacity:0});
         }
         var animateFrame4 = function(flag){
@@ -310,23 +249,16 @@ amo.registerAttribute("frameText53", "TEXT", "<div style='top: 305px;left: 26px;
         var animateFrame2 = function(flag){
           var frameId = 2;
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameImage'+frameId, {duration:0, onComplete: generalLeftFrameAnimation, onCompleteParams:[frameId]})
+          .to('#frameImage'+frameId, {duration:0, onComplete: generalFrameAnimation, onCompleteParams:[frameId]})
           .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.2, opacity:0, onComplete: animateFrame3}));
         }
         var animateFrame1 = function(flag){
-          ad.layers.frameVideo1.querySelector('video').onplay = function(){
-            gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-            .from('#frameText1', {autoAlpha:0})
-            .to('#frameText1', {autoAlpha:0,delay:1.5})
-            .from('#frameText12', {autoAlpha:0})
-          }
           ad.layers.frameVideo1.querySelector('video').onended = function(){
             gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
             .to('#frame1', (flag==true?{}:{delay:0.3, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
           }
         }
-        if('frame1' in ad.layers) ad.layers.frame1.remove();
-                    gsap.delayedCall(1.2, animateFrame5, [true]);
+        gsap.delayedCall(.8, animateFrame1);
       });
     }, 2000);
   </script>
